# SOProyecto

./: CMakeLists.txt  README.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
Final/: cifrado.cpp  cifrado.hpp  fs_compat.hpp  hash.cpp  hash.hpp  main.cpp  verificar.cpp  verificar.hpp
cifrados/: 10.txt
sha/: 1.sha
src/: cifrado.cpp  cifrado.hpp  fs_compat.hpp  hash.cpp  hash.hpp  main.cpp  main_opt.cpp  verificar.cpp  verificar.hpp
